<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <Button
        android:id="@+id/firstTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_psychology_test1"
        />
    <Button
        android:id="@+id/secondTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_psychology_test2"
        />
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_psychology_about"
        />
    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_exit"
        />
    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_psychology_result"
        />
</LinearLayout>